--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: airflow
@@ -13,12 +13,12 @@ services:
       - "3306:3306"
 
   airflow-webserver:
-    image: apache/airflow:2.10.1
+    image: apache/airflow:latest-python3.12
     depends_on:
       - mysql
       - airflow-init
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX: 'True'
     volumes:
@@ -30,12 +30,12 @@ services:
     command: webserver
 
   airflow-scheduler:
-    image: apache/airflow:2.6.1
+    image: apache/airflow:latest-python3.12
     depends_on:
       - mysql
       - airflow-init
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
@@ -43,9 +43,9 @@ services:
     command: scheduler
 
   airflow-init:
-    image: apache/airflow:2.6.1
+    image: apache/airflow:latest-python3.12
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
@@ -54,21 +54,21 @@ services:
       /bin/bash -c "
       airflow db init &&
       airflow users create \
-          --username admin \
-          --password admin \
-          --firstname Airflow \
-          --lastname Admin \
+          --username Broma \
+          --password broma1286 \
+          --firstname Lalo \
+          --lastname Broma \
           --role Admin \
-          --email admin@example.com
+          --email loic.rouaud@gmail.com
       "
 
   airflow-cli:
-    image: apache/airflow:2.6.1
+    image: apache/airflow:latest-python3.12
     depends_on:
       - mysql
       - airflow-init
     environment:
-      AIRFLOW__CORE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
