--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,91 @@
-version: '3'
 services:
-  mysql:
-    image: mysql:8.0
+  postgres:
+    image: postgres:16
+    container_name: postgres
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: airflow
-      MYSQL_USER: airflow
-      MYSQL_PASSWORD: airflowpassword
+      POSTGRES_USER: airflow_user
+      POSTGRES_PASSWORD: airflow_password
+      POSTGRES_DB: airflow_db
     volumes:
-      - ./mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
+      - data:/data
     ports:
-      - "3306:3306"
+      - "5432:5432"
 
-  airflow-webserver:
-    image: apache/airflow:latest-python3.12
-    depends_on:
-      - mysql
-      - airflow-init
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
     environment:
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
-      AIRFLOW__CORE__EXECUTOR: LocalExecutor
-      AIRFLOW__WEBSERVER__ENABLE_PROXY_FIX: 'True'
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "8081:80"
+    depends_on:
+      - postgres
+
+  airflow-init:
+    image: apache/airflow:latest-python3.12
+    container_name: airflow-init
+    environment:
+      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow_user:airflow_password@postgres/airflow_db
+      AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
+      - ./utils:/opt/airflow/utils
+    entrypoint: |
+      /bin/bash -c "
+      airflow db upgrade;
+      airflow users create --username Broma --password broma1286 --firstname Lalo --lastname Broma --role Admin --email loic.rouaud@gmail.com;
+      "
+    depends_on:
+      - postgres
+    restart: on-failure
+
+  airflow-webserver:
+    image: apache/airflow:latest-python3.12
+    container_name: airflow-webserver
+    environment:
+      AIRFLOW__CORE__EXECUTOR: CeleryExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow_user:airflow_password@postgres/airflow_db
+      AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
+      AIRFLOW__WEBSERVER__WORKERS: 4
     ports:
       - "8080:8080"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      - ./logs:/opt/airflow/logs
+      - ./plugins:/opt/airflow/plugins
+      - ./utils:/opt/airflow/utils
+      - ./data:/opt/airflow/data
+    depends_on:
+      - postgres
+    restart: always
     command: webserver
 
   airflow-scheduler:
     image: apache/airflow:latest-python3.12
-    depends_on:
-      - mysql
-      - airflow-init
+    container_name: airflow-scheduler
     environment:
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow_user:airflow_password@postgres/airflow_db
     volumes:
       - ./dags:/opt/airflow/dags
       - ./logs:/opt/airflow/logs
       - ./plugins:/opt/airflow/plugins
+      - ./utils:/opt/airflow/utils
+      - ./data:/opt/airflow/data
+
+    depends_on:
+      - postgres
+    restart: always
     command: scheduler
 
-  airflow-init:
-    image: apache/airflow:latest-python3.12
-    environment:
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-    entrypoint: >
-      /bin/bash -c "
-      airflow db init &&
-      airflow users create \
-          --username Broma \
-          --password broma1286 \
-          --firstname Lalo \
-          --lastname Broma \
-          --role Admin \
-          --email loic.rouaud@gmail.com
-      "
-
-  airflow-cli:
-    image: apache/airflow:latest-python3.12
-    depends_on:
-      - mysql
-      - airflow-init
-    environment:
-      AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: 'mysql+mysqlconnector://airflow:airflowpassword@mysql/airflow'
-    volumes:
-      - ./dags:/opt/airflow/dags
-      - ./logs:/opt/airflow/logs
-      - ./plugins:/opt/airflow/plugins
-    entrypoint: "/bin/bash"
-
 volumes:
-  mysql_data:
-    driver: local  # Docker will manage this volume
+  postgres_data:
+  logs:
+  dags:
+  plugins:
+  data:
